--- a/css/style.css
+++ b/css/style.css
@@ -104,8 +104,7 @@ address {font-style: normal}
 }
 
 .section-one-container {
-padding-top: 188px;
-padding-bottom: 188px;
+padding: 0 188px;
 }
 
 .title {
@@ -134,6 +133,7 @@ padding: 16px 32px;
 margin-right: auto;
 margin-left: auto;
 display: block;
+min-width: 169px;
 }
 .title-button:hover {
 background-color: #404BBF;
@@ -150,7 +150,7 @@ padding-top: 120px;
 padding-bottom: 120px;
 }
 
-.features-none {
+.visually-hidden {
         display: none;
 }
 
@@ -183,8 +183,7 @@ gap: 24px;
 }
 
 .team-container  {
-padding-top: 120px;
-padding-bottom: 120px;
+padding: 120px 0 120px;
 }
 
 .team-list {
@@ -242,10 +241,8 @@ gap: 48px 24px;
 }
 
 .portfolio-item {
-        border: 1px solid #e7e9fc;
-        box-sizing: border-box;
         padding-bottom: 32px;
-        width: calc ( ( 100% - 24 * 2 ) / 3 );
+        width: calc ( ( 100% - 48px ) / 3 );
 }
 .portfolio-title {
         font-weight: 700;
@@ -258,6 +255,10 @@ gap: 48px 24px;
         margin-bottom: 72px;
 }
 
+.portfolio-sub-text {
+        border: 1px solid #e7e9fc;
+        box-sizing: border-box;
+}
 .portfolio-img {
         margin: 0 auto;
         margin-bottom: 32px;
