--- a/css/style.css
+++ b/css/style.css
@@ -156,10 +156,12 @@ padding-bottom: 120px;
         width: 1px;
         height: 1px;
         margin: -1px;
-        padding: 0;
-        overflow: hidden;
-        clip: rect(0, 0, 0, 0);
         border: 0;
+        padding: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
 }
 
 .features-list {
@@ -201,7 +203,7 @@ padding: 120px 0 120px;
 .team-list {
         display: flex;
         gap: 24px;
-        width: calc((100% - 72px) / 4);
+        width: calc((100% - 3 * 24px) / 4)
 }
 .team-item {
         background-color: #FFFFFF;
@@ -260,7 +262,7 @@ gap: 48px 24px;
 
 .portfolio-item {
         padding-bottom: 32px;
-        width: calc (( 100% - 48px ) / 3 );
+        width: calc((100% - 48px) / 3);
 }
 .portfolio-title {
         font-weight: 700;
