--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ padding: 120px 0 120px;
 .team-list {
         display: flex;
         gap: 24px;
-        width: calc((100% - 3 * 24px) / 4)
+        width: calc((100% - 72px) / 4)
 }
 .team-item {
         background-color: #FFFFFF;
@@ -262,7 +262,7 @@ gap: 48px 24px;
 
 .portfolio-item {
         padding-bottom: 32px;
-        width: calc((100% - 48px) / 3);
+        width: calc( (100% - 48px) / 3);
 }
 .portfolio-title {
         font-weight: 700;
@@ -278,6 +278,8 @@ gap: 48px 24px;
 .portfolio-sub-text {
         border: 1px solid #e7e9fc;
         box-sizing: border-box;
+        padding: 32px 16px;
+        border-top: none;
 }
 .portfolio-img {
         margin: 0 auto;
